--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,15 @@ artifacts
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
